# application-bot

./: .env.example  .gitignore  README.md  app_api.py  app_main.py  application-bot  make_macos_app.sh  pyproject.toml  requirements-app.txt  run_app.sh  setup_app.py
app_ui/: index.html
application_bot/: __init__.py  answers.py  apply_helper.py  assisted_apply.py  auto_apply.py  claims.py  compliance.py  config.py  confirmations.py  cover_letter_llm.py  database.py  email_service.py  main.py  models.py  packets.py  pdf.py  pipeline.py  policy.py  reporting.py  resume.py  review.py  scheduler.py  scoring.py  screening_llm.py
config/: application_answer_bank.yaml  approved_claims_vadim_context.yaml  claim_evidence.yaml  company_registry.yaml  default.yaml  live_company_registry.yaml  resume_claim_inventory.yaml
docs/: ACTIVE_HANDOFF.md  ANSWER_BANK.md  APPLICATION_CRM.md  ARCHITECTURE.md  ATS_RESUME.md  AUTONOMY_POLICY.md  CLAIM_APPROVAL_WORKFLOW.md  CLAIM_INVENTORY.md  EMAIL_TO_APPLY.md  HANDOFF_M45_NEXT.md  HANDOFF_M49_SCREENING.md  HANDOFF_NEXT_SESSION.md  OPERATIONS.md  PROJECT_STATE.md  REVIEW_HTML.md  REVIEW_QUEUE.md  SCHEDULER.md  SOURCE_ADAPTERS.md  VERIFICATION.md
examples/: email_jobs.example.json  email_to_apply_seed.json  jobs.example.json
launchd/: com.vadim.jobapply-daily.plist
tests/: test_application_bot.py  test_m10_claim_approval.py  test_m15_first_email.py  test_m17_ats_resume.py  test_m18_assisted_apply.py  test_m19_sales_title_offset.py  test_m20_fresh_discovery.py  test_m21_pdf.py  test_m22_digest.py  test_m23_app_api.py  test_m29_adzuna.py  (+22 more)
(+13 files in other folders)
